Fixed z-index again

--- a/files/css/styles.css
+++ b/files/css/styles.css
@@ -92,7 +92,7 @@ a:hover {
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 2;
+    z-index: 1;
     transition: all 0.5s ease;
 }
 .nav {
